unpackaged/main/default/objects/SALine_Assigned_Resource__c/SALine_Assigned_Resource__c.object-meta.xml
<CustomObject>
    <label>Assigned Resource</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Associated Resource Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assigned Resources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>