unpackaged/main/default/objects/SALine_Assigned_Resource__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Assigned Resources</relationshipLabel>
    <relationshipName>Assigned_Resources</relationshipName>
    <type>Lookup</type>
</CustomField>