unpackaged/main/default/objects/SALine_Assigned_Resource__c/fields/Actual_Salary_Amount__c.field-meta.xml
<CustomField>
    <fullName>Actual_Salary_Amount__c</fullName>
    <formula>Employee__r.ETIN_Gross_Salary_Adnoc__c</formula>
    <label>Actual Salary Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>