unpackaged/main/default/objects/SALine_Assigned_Resource__c/fields/Assign_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Assign_End_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Assign End Date</label>
    <type>DateTime</type>
</CustomField>