unpackaged/main/default/objects/SALine_Assigned_Resource__c/fields/Deduction_Amount__c.field-meta.xml
<CustomField>
    <fullName>Deduction_Amount__c</fullName>
    <formula>Employee__r.Deduction_Amount_Adnoc__c</formula>
    <label>Deduction Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>