unpackaged/main/default/objects/SALine_Assigned_Resource__c/fields/Driver_Category__c.field-meta.xml
<CustomField>
    <fullName>Driver_Category__c</fullName>
    <formula>Employee__r.Category__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Driver Category</label>
    <type>Text</type>
</CustomField>