unpackaged/main/default/objects/SALine_Assigned_Resource__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Employee</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Assigned Resources (Employee)</relationshipLabel>
    <relationshipName>Assigned_Resources1</relationshipName>
    <type>Lookup</type>
</CustomField>