unpackaged/main/default/objects/SALine_Assigned_Resource__c/fields/Employee_Name__c.field-meta.xml
<CustomField>
    <fullName>Employee_Name__c</fullName>
    <formula>Employee__r.FirstName +&#39; &#39;+ Employee__r.MiddleName +&#39; &#39;+ Employee__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employee Name</label>
    <type>Text</type>
</CustomField>