unpackaged/main/default/objects/SALine_Assigned_Resource__c/fields/Employee_Type__c.field-meta.xml
<CustomField>
    <fullName>Employee_Type__c</fullName>
    <label>Employee Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Driver</fullName>
            </value>
            <value>
                <fullName>Nanny</fullName>
            </value>
            <value>
                <fullName>Cordinator</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>