unpackaged/main/default/objects/SALine_Assigned_Resource__c/fields/ETST_Assigned_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>ETST_Assigned_Vehicle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Vehicle</label>
    <referenceTo>SALine_Assigned_Vehicle__c</referenceTo>
    <relationshipLabel>Assigned Resources</relationshipLabel>
    <relationshipName>Assigned_Resources</relationshipName>
    <type>Lookup</type>
</CustomField>