unpackaged/main/default/objects/SALine_Assigned_Resource__c/fields/Salary_Paid_Amount__c.field-meta.xml
<CustomField>
    <fullName>Salary_Paid_Amount__c</fullName>
    <formula>Employee__r.Salary_Paid_Amount_Adnoc__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Salary Paid Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>