unpackaged/main/default/objects/SALine_Assigned_Resource__c/fields/Salary_Paid_Date__c.field-meta.xml
<CustomField>
    <fullName>Salary_Paid_Date__c</fullName>
    <formula>Employee__r.Salary_Paid_Date_Adnoc__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Salary Paid Date</label>
    <type>Date</type>
</CustomField>