unpackaged/main/default/objects/SALine_Assigned_Resource__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Assign_Start_Date__c</columns>
    <columns>Assign_End_Date__c</columns>
    <columns>Salary_Paid_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Deduction_Amount__c</columns>
    <columns>Deduction_Reason__c</columns>
    <columns>Employee__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>